Tried cleaning up spacing in jumbotron

--- a/notion/jumbotron.scss
+++ b/notion/jumbotron.scss
@@ -15,6 +15,7 @@ $gray-900: #212529;
     h1.jumbotron-header {
         font-size: 5rem;
         color: $gray-900;
+        text-align: right;
         font-weight: 700;
     }
 
