--- a/the-web-dev-bootcamp/yelpcamp/views/partials/head.ejs
+++ b/the-web-dev-bootcamp/yelpcamp/views/partials/head.ejs
@@ -1,39 +1,18 @@
 <head>
   <title>
-    <%= req.pageName %>
-    - TAMU Datathon</title>
+    <%= yelpcamp.pageName %>
+  </title>
   <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
-  <meta property="og:title" content="<%= req.pageName %> - TAMU Datathon">
-  <meta property="og:site_name" content="TAMU Datathon">
-  <meta property="og:url" content="tamudatathon.com">
-  <meta property="og:description" content="<%= req.pageDescription || '' %>">
+  <meta property="og:title" content="<%= yelpcamp.pageName %> - TAMU Datathon">
+  <meta property="og:description" content="<%= yelpcamp.pageDescription || '' %>">
   <meta property="og:type" content="profile">
   <meta name="twitter:card" content="summary">
-  <meta name="twitter:site" content="tamudatathon.com">
-  <meta name="twitter:title" content="<%= req.pageName %> - TAMU Datathon">
+  <meta name="twitter:title" content="<%= yelpcamp.pageName %> - TAMU Datathon">
   <meta name="twitter:description" content="">
-
-  <!-- Specify preconnect hosts -->
-  <link rel="preconnect" href="https://unpkg.com" />
-  <link rel="preconnect" href="https://kit.fontawesome.com" />
-  <link rel="preconnect" href="https://www.googletagmanager.com" />
 
   <link rel="icon" type="image/png" href="static/img/favicon.ico" />
 
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous" />
   <link rel="stylesheet" href="/static/css/style.css" />
 
-  <link rel="stylesheet" href="https://unpkg.com/tippy.js@6.2.3/themes/light.css" />
-
-  <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async="async" src="https://www.googletagmanager.com/gtag/js?id=UA-138612638-1"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-
-    function gtag() {
-      dataLayer.push(arguments);
-    }
-    gtag("js", new Date());
-
-    gtag("config", "UA-138612638-1");
-  </script>
 </head>
