--- a/the-web-dev-bootcamp/yelpcamp/views/partials/navbar.ejs
+++ b/the-web-dev-bootcamp/yelpcamp/views/partials/navbar.ejs
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-transparent">
+<nav class="navbar navbar-default navbar-expand-lg">
   <!-- responsive toggle button -->
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -9,7 +9,7 @@
       <!-- tell me this is not the most elegant thing ever made -->
       <% yelpcamp.navbar.forEach(({ name, href }) => { %>
       <li class="nav-item active">
-        <a class="nav-link same-page-nav-link" href="<%- href %>">
+        <a class="nav-link same-page-nav-link" href="<%= href %>">
           <%= name %></a>
       </li>
       <% }) %>
