--- a/the-web-dev-bootcamp/yelpcamp/views/partials/head.ejs
+++ b/the-web-dev-bootcamp/yelpcamp/views/partials/head.ejs
@@ -1,18 +1,25 @@
 <head>
-  <title>
-    <%= yelpcamp.pageName %>
-  </title>
-  <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
-  <meta property="og:title" content="<%= yelpcamp.pageName %> - TAMU Datathon">
-  <meta property="og:description" content="<%= yelpcamp.pageDescription || '' %>">
-  <meta property="og:type" content="profile">
-  <meta name="twitter:card" content="summary">
-  <meta name="twitter:title" content="<%= yelpcamp.pageName %> - TAMU Datathon">
-  <meta name="twitter:description" content="">
+    <title>
+        <%= yelpcamp.pageName %>
+    </title>
+    <meta name="viewport"
+        content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
+    <meta property="og:title" content="<%= yelpcamp.pageName %> - TAMU Datathon">
+    <meta property="og:description" content="<%= yelpcamp.pageDescription || '' %>">
+    <meta property="og:type" content="profile">
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:title" content="<%= yelpcamp.pageName %> - TAMU Datathon">
+    <meta name="twitter:description" content="">
 
-  <link rel="icon" type="image/png" href="static/img/favicon.ico" />
+    <link rel="icon" type="image/png" href="static/img/favicon.ico" />
 
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous" />
-  <link rel="stylesheet" href="/static/css/style.css" />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+        integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous" />
+
+    <% if (yelpcamp.templateFile == 'landing') { %>
+    <link rel="stylesheet" href="/static/css/landing.css" />
+    <% } else { %>
+    <link rel="stylesheet" href="/static/css/style.css" />
+    <% } %>
 
 </head>
