Add campground partial, add styles & add font

--- a/the-web-dev-bootcamp/yelpcamp/views/index.ejs
+++ b/the-web-dev-bootcamp/yelpcamp/views/index.ejs
@@ -7,6 +7,10 @@
 
     <%- include ("./partials/navbar") %>
 
+    <%- include ("./partials/jumbotron") %>
+
+    <%- include ("./partials/content") %>
+
     <%- include ("./partials/footer") %>
 
     <%- include ("./partials/scripts") %>
