--- a/the-web-dev-bootcamp/yelpcamp/views/partials/footer.ejs
+++ b/the-web-dev-bootcamp/yelpcamp/views/partials/footer.ejs
@@ -1,9 +1,13 @@
 <!-- footer partial start -->
 
-<!-- <div class="footer-section">
-  <div id="footer" class="container">
-    footer
-  </div>
-</div> -->
+<div class="mt-3">
+    <footer class="footer">
+        <div class="container text-center">
+            <small class="text-muted"> &copy; YelpCamp 2018 | <a class="text-muted" href="/about">About</a> | <a
+                    class="text-muted" href="https://github.com/himanshup/yelp-camp">Github</a></small>
+        </div>
+    </footer>
+</div>
+
 
 <!-- footer partial end -->
