--- a/the-web-dev-bootcamp/yelpcamp/views/partials/head.ejs
+++ b/the-web-dev-bootcamp/yelpcamp/views/partials/head.ejs
@@ -15,6 +15,8 @@
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous" />
+    <!-- font -->
+    <link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet">
 
     <% if (yelpcamp.templateFile == 'landing') { %>
     <link rel="stylesheet" href="/static/css/landing.css" />
