--- a/the-web-dev-bootcamp/yelpcamp/views/partials/footer.ejs
+++ b/the-web-dev-bootcamp/yelpcamp/views/partials/footer.ejs
@@ -3,8 +3,13 @@
 <div class="mt-3">
     <footer class="footer">
         <div class="container text-center">
-            <small class="text-muted"> &copy; YelpCamp 2018 | <a class="text-muted" href="/about">About</a> | <a
-                    class="text-muted" href="https://github.com/himanshup/yelp-camp">Github</a></small>
+            <small class="text-muted">&copy; YelpCamp 2018 |
+                <span class="text-muted">Created from this <a href="https://github.com/himanshup/yelpcamp">repo</a></span>
+                |
+                <a class="text-muted" href="/about">About</a>
+                |
+                <a class="text-muted" href="https://yelp-camp2018.herokuapp.com">Heroku</a>
+            </small>
         </div>
     </footer>
 </div>
